assets/css/style.css
/* root css variables */
:root{
    --clr-modal-background:#0a0a0a;
    --clr-text-:#ffffff;
    --clr-modal-buttons: #ffa500;

}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    height: 100vh;
    position: relative;
    /* min-height: 100%; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background:#b0a3a3 no-repeat center/cover url(../images/game-stage-big-ashok-chakravarthi-unsplash.jpg);
    cursor: none;
    background-color: #0a0a0a;
    overflow-x: hidden;
    overflow-y: hidden;
   
   

   
}

h1{
    color: var(--clr-text-);
    text-align: center;
    padding-top: 10px;
    width: 100vw;
    font-weight: 800;
    text-transform: uppercase;
    background-color: #3b3939;


}

header{
    background-color: #3b3939;
    display: flex;
    justify-content: space-between;
    align-items: center; 
    height: 2rem;
    color:var(--clr-text-);
    font-size: 1.2rem;
    /* margin-top: 20px; */
    padding: 10px 2% 0 2%;
    width: 100%;

}

#game-field{
    width: 100vw;
    height: 90vh;
    position: relative;
    z-index: 5;
    border: 2px solid var(--clr-modal-background) ;
   

}

.cursor{
    width: 15px;
    height: 15px;
    font-weight: 900;
    background-blend-mode: color-burn;
    background:no-repeat center/cover url(../images/crosshair-2.jpg) ;
    border-radius: 50%;
    position: absolute;
    transform: translate(-50%,-50%);
    pointer-events: none;
    z-index: 20;
}

#holeImg{
    width: 25px;
    height: 25px;
    background: no-repeat center/cover url(../images/bullet-hole.webp);
    position: absolute;
    display: none;

}

#target-guitar{
    height: 50px;
    width: 30px;
    position: absolute;
    /* display: none; */
}

footer{
    width: 40%;
    display: flex;
    justify-content: space-around;
    /* margin-bottom: 20px; */
    background-color: #3b3939;
}

footer a{
    text-decoration: none;
    color: white;
    font-size: 1.5rem;
    
}

footer a:hover{
    color:green;
}

/* modal screens style */

.modal{
    border: .3px inset white;
    background-color: rgb(58, 50, 50);
    padding: 2%;
    width: 85vw;
    height: 80vh;
    padding: 2%;
    position: absolute;
    border-radius: 2%;
    display: flex;
    flex-direction: column;
    align-items: center;
    left: 0;
    right: 0;
    top: 5px;
    margin: auto; 
    z-index: 20;
    overflow-y: visible;

}

.modal-button{
    font-size: 1.5rem;
    padding: 10px 25px;
    width: 130px;
    font-weight: 600;
    border-radius: 5px;
    background-color:var(--clr-modal-buttons);
}

.screen-titles{
    text-align: center;
    font-size: 2rem;
    color: var(--clr-text-);
}

.screen-description{
    font-size: 1.5rem;
    color: var(--clr-text-);
    padding: 3%;


}


.welcome-screen{
    display: flex;
    flex-direction: column;
    align-items: center;
    background:center/cover url(../images/welcome_guitar-maxime-favier-unsplash.webp);
    background-blend-mode: overlay;
    justify-content: center;
    gap: 5%;
  
        
  
}

#welcome-screen{
    z-index: 30;
    /* display not in original code so remove */
    /* display: none; */
    height: 75vh;
}

#start-game-modal{
    justify-content: center;
    height: 75vh;
    gap: 5%;
  
  
 }

 #target-img{
    height: 160px;
    width: 100px;
    float: left;
    margin: 5px;
     
 }



.hide{
    display: none;
}

.game-over{
    background-color:var(--clr-modal-background);
    height: 70vh;
    width: 85vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    position: absolute;
    padding: 2%; 
    border-radius: 2%;
    left: 0;
    right: 0;
    top: 0;
    margin: auto; 
    z-index: 20;
      /* display not in original code so remove */
     display: none;
    

}

#game-over >button{
    width: 80%;
}

#transition-screen{
    background-color: black;
    justify-content: center;
    gap: 15%;
    /* this display was in original code */
    display: none;   
    height: 520px;
   
   
}

#play-quiz{
    width:80% ;
}

/* 404 page styles */
#page-404{
    background: no-repeat center/cover url(assets/images/404-page.jpg);
   
}



/* media queries */

@media screen and (min-width:480px){
    /* .modal, .game-over{
        width: 300px;
    } */
    .screen-description{
        font-size:1.8rem ;
    }
    .screen-titles{
        font-size: 2.5rem;
    }
}

@media screen and (min-width:640px){

.screen-titles{
    font-size:2.8rem ;
 }

.screen-description{
    font-size: 1.8rem;
   }

.modal-button{
    font-size: 1.8rem;
    padding: 15px 30px;
    width: 200px;
   }

#start-game-modal,
#transition-screen,
#welcome-screen{
    width: 400px;
    height: 640px;
}

.game-over{
    width: 400px;
}

}



@media screen and (min-width:920px){
    .modal{
        width:45vw;
    }

    #start-game-modal,
    #transition-screen,
    #welcome-screen {
        width: 500px;
        
    }

    .game-over{
        width: 500px;
    }

    #target-guitar{
        height: 65px;
        width: 40px;
    }

} 

/* new modal try */
/* 
#test-modal {
    justify-content: space-between;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2000;
    height: 50vh;
    width: 50vw;
    background-color: white;     
 }
 #inner-modal{
    border: 2px solid red;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 100%;
 } */
 /* end of new modal */

